# whisper_tools

./: .gitignore  README.md  google_dump_comments.py  pyproject.toml  scene_summarizer.py  whisper_output_splitter.py  whisper_srt.py
