[tool.poetry]
name = "whisper-tools"
version = "0.1.0"
description = ""
authors = ["Jag Srawan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.32.3"
faster-whisper = "^1.1.0"
torch = "^2.5.1"
nltk = "^3.9.1"
ipython = "^8.29.0"
spacy = "^3.8.3"
pysrt = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
